# sg-addons-repo-template

./: README.md  copier.yml  pyproject.toml
src/: .pre-commit-config.yaml.jinja  .pylintrc-mandatory.jinja  .pylintrc.jinja  {% if 12 < odoo_version < 18 %}.prettierrc.yml{% endif %}  {% if use_ruff %}.ruff.toml{% endif%}.jinja
src/.github/workflows/: pre-commit.yml.jinja  test.yml.jinja  {% if ci == 'GitHub' %}test.yml{% endif %}.jinja
src_sg15legacy/: .eslintrc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .pylintrc-mandatory.jinja  .pylintrc.jinja
src_sg15legacy/.github/workflows/: pre-commit.yml  test.yml
tests/: test_copy.py
