[project]
name = "oca-addons-repo-template"
version = "1.0"
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "copier >=9",
    "pytest",
    "pre-commit",
    "pytest-xdist",
]

# ruff

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",  # isort
]

# pytest

[tool.pytest.ini_options]
addopts = "-n auto -ra tests"
